--- a/app/src/main/res/layout/restaurante_item_row.xml
+++ b/app/src/main/res/layout/restaurante_item_row.xml
@@ -30,7 +30,8 @@
             android:text="@string/app_name"
             android:textColor="@color/background_dark"
             android:textSize="15sp"
-            android:typeface="monospace" />
+            android:textStyle="italic"
+            android:typeface="sans" />
 
         <RatingBar
             android:id="@+id/rating"
