--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,10 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="@color/background_light" />
+            app:tabBackground="@color/background_light"
+            app:tabIndicatorColor="@color/domiclios"
+            app:tabSelectedTextColor="@color/domiclios"
+            app:tabTextColor="@color/secondary_text_light" />
 
     </android.support.design.widget.AppBarLayout>
 
