--- a/app/src/main/res/layout/activity_restaurante.xml
+++ b/app/src/main/res/layout/activity_restaurante.xml
@@ -33,7 +33,11 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:tabBackground="@color/background_light"
+                app:tabIndicatorColor="@color/domiclios"
+                app:tabSelectedTextColor="@color/domiclios"
+                app:tabTextColor="@color/secondary_text_light" />
 
         </android.support.design.widget.AppBarLayout>
 
