--- a/app/src/main/res/layout/fragment_plato.xml
+++ b/app/src/main/res/layout/fragment_plato.xml
@@ -157,6 +157,11 @@
         android:layout_below="@id/info_restaurante"
         android:orientation="vertical">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D6D6D6" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
