--- a/app/src/main/res/layout/activity_orden.xml
+++ b/app/src/main/res/layout/activity_orden.xml
@@ -103,10 +103,11 @@
                 android:text="@string/total"
                 android:textColor="@color/background_dark"
                 android:textSize="25sp"
+                android:textStyle="bold"
                 android:typeface="sans" />
 
             <TextView
-                android:id="@+id/total_price"
+                android:id="@+id/precio_total"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -116,6 +117,7 @@
                 android:text="@string/number_0"
                 android:textColor="@color/background_dark"
                 android:textSize="25sp"
+                android:textStyle="bold"
                 android:typeface="sans" />
         </LinearLayout>
 
