--- a/app/src/main/res/layout/fragment_plato.xml
+++ b/app/src/main/res/layout/fragment_plato.xml
@@ -191,7 +191,7 @@
                 android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/total_price"
+                android:id="@+id/precio_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
