--- a/app/src/main/res/layout/activity_confirmar_pedido.xml
+++ b/app/src/main/res/layout/activity_confirmar_pedido.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
             android:gravity="center"
             android:text="@string/pedido_confirmado"
             android:textColor="@color/background_light"
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_margin="10dp"
             android:gravity="center"
             android:text="@string/mensaje_tiempo_entrega"
             android:textColor="@color/background_light"
